deploy/k8s/oss-webui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pomelo-oss-webui
  namespace: <NAMESPACE>
  annotations:
    konghq.com/protocol: https
    konghq.com/host-header: "<OSS_BUCKET>.oss-cn-shanghai.aliyuncs.com"
    konghq.com/plugins: pomelo-oss-webui-response-headers
spec:
  ports:
  - port: 443
    targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pomelo-oss-webui
  namespace: <NAMESPACE>
subsets:
- addresses:
  # OSS cn-shanghai static website LB IP (per-env)
  # test=nslookup pomelo-mb-test.oss-cn-shanghai.aliyuncs.com
  # prod=nslookup pomelo-mb-prod.oss-cn-shanghai.aliyuncs.com
  - ip: <OSS_IP>
  ports:
  - port: 443
    protocol: TCP
